Bug 85111 - Custom Properties box is missing a frame around it
Summary: Custom Properties box is missing a frame around it
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.3.2.2 release
Hardware: Other Windows (All)
: low trivial
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.4.0
Keywords:
Depends on:
Blocks: File-Properties
  Show dependency treegraph
 
Reported: 2014-10-16 20:01 UTC by A (Andy)
Modified: 2018-03-01 13:39 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description A (Andy) 2014-10-16 20:01:08 UTC
The title bar in the PROPERTIES dialogue box is missing a frame.

Steps to Reproduce:
1. Open any LibreOffice application
2. Go to FILE -> PROPERTIES -> tab CUSTOM PROPERTIES

The title bar with "Name", "Type" and "Value" has a black line as frame on the right and at the bottom, but no one at the top and on the left.

Reproducible with LO 4.3.2.2 (Win 8.1)
Comment 1 Adolfo Jayme Barrientos 2014-10-17 00:15:55 UTC
Screenshot?
Comment 2 Adolfo Jayme Barrientos 2014-10-25 16:17:33 UTC
OK, nevermind the screenshot, I can see it.

So I investigated a bit. This dialog is using an object called CustomPropertiesControl [1], and I initially tried adding the “:border” suffix to this object in the tab page’s .ui file, but it had no effect in rendering.
Then I compared this object with the one used in the Font Substitution page in Options. There, an object called SimpleTableContainer is used, which already renders a border (since commit 4895dd45). So, a simple fix would be adding the WB_BORDER bit to CustomPropertiesControl, but it seemed to me that CustomPropertiesControl could be redundant to SimpleTableContainer. Of course, perhaps I’m missing the big picture here.

[1]: http://opengrok.libreoffice.org/xref/core/sfx2/source/dialog/dinfdlg.cxx#1987

Thoughts, Caolán?
Comment 3 Caolán McNamara 2014-10-29 13:21:54 UTC
I don't think its "simple" enough to munge into a SimpleTableContainer. Well, maybe it might be, but its easier and faster to make some alternative tweaks.
Comment 4 Commit Notification 2014-10-29 16:03:59 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f0ffe0c063c8fe32758d77c83f773821ac185ba0

Resolves: fdo#85111 put a border around the custom properties box

It will be available in 4.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 A (Andy) 2014-11-09 12:25:43 UTC
@Adolfo and Caolán:
Maybe only partly linked to this bug.  But should there also be a frame around the background colour tab?  I mean here around the selectable colours.  

-> WRITER -> FORMAT -> PARAGRAPH -> tab BACKGROUND
This function is used in several places (like FORMAT -> CHARACTER; FORMAT -> PAGE; INSERT -> SECTION; INSERT -> INDEXES AND TABLES 2x; INSERT -> FRAME).

And maybe also a frame around:
WRITER -> INSERT -> TABLE -> button Autoformat 
WRITER -> TOOLS -> XML FILTER SETTINGS
CALC -> DATA -> CONSOLIDATE
CALC -> INSERT -> SHEET
Comment 6 Commit Notification 2014-11-10 16:17:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=735f3a94b92ac93d11f66c3a86edc42e1915b337

Related: fdo#85111 put a box around xml filter settings control

It will be available in 4.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.