Resolves: fdo#85111 put a border around the custom properties box

Change-Id: Ibdbfb4a88c1c75aaf5d33672d8639a9ea55afbac